content/browser/webrtc/webrtc_capture_from_element_browsertest.cc
@@ -73,9 +73,20 @@ class WebRtcCaptureFromElementBrowserTest
 };
 
 IN_PROC_BROWSER_TEST_F(WebRtcCaptureFromElementBrowserTest,
-                       VerifyCanvasCaptureColor) {
-  MakeTypicalCall("testCanvasCaptureColors();",
+                       VerifyCanvas2DCaptureColor) {
+  MakeTypicalCall("testCanvas2DCaptureColors();",
                   kCanvasCaptureColorTestHtmlFile);
+}
+
+IN_PROC_BROWSER_TEST_F(WebRtcCaptureFromElementBrowserTest,
+                       VerifyCanvasWebGLCaptureColor) {
+#if !defined(OS_MACOSX)
+  // TODO(crbug.com/706009): Make this test pass on mac.  Behavior is not buggy
+  // (verified manually) on mac, but for some reason this test fails on the mac
+  // bot.
+  MakeTypicalCall("testCanvasWebGLCaptureColors();",
+                  kCanvasCaptureColorTestHtmlFile);
+#endif
 }
 
 IN_PROC_BROWSER_TEST_F(WebRtcCaptureFromElementBrowserTest,
